--- a/templates/header.html
+++ b/templates/header.html
@@ -7,7 +7,7 @@
                 <ul>
                     <li><a href="#t">Главная</a></li>
                     <li><a href="#t">О нас</a></li>
-                    <li><a href="#time-table">Мерроприятия</a></li>
+                    <li><a href="{% url 'event' %}">Мерроприятия</a></li>
                     <li><a href="#">Отзывы</a></li>
                     <!-- <li><a href="#speaker">Спикер</a></li> -->
                     <!--<li><a href="#price_list">Цены</a></li>-->
