--- a/templates/index.html
+++ b/templates/index.html
@@ -3,22 +3,7 @@
 {% load staticfiles %}
 
 {% block content %}
-    <div class="popup" data-popup="popup-1">
-        <div class="popup-inner">
 
-            <div class="application">Заполните форму</div>
-
-            <p>Мы свяжемся с вами в ближайшее время</p>
-
-            <form action="send_email.php" method="post" id="requestForm">
-                <input type="text" name="name" maxlength="25" placeholder="Имя">
-                <input type="tel" name="number" placeholder="Телефон с кодом">
-                <input type="email" name="email" placeholder="E-mail">
-                <input type="submit" value="Отправить">
-            </form>
-            <a class="popup-close" data-popup-close="popup-1"><img src="assets/images/close-btn.png" alt="image"></a>
-        </div>
-    </div>
     {% include 'header.html' %}
 
     <div class="bg1">
@@ -57,9 +42,8 @@
                     <div class="tour_desc">
                         <div class="tour_title">Кан и Гут</div>
                         <p>Озеро Чатыр-Куль расположено между хребтами Ат-Баши и Торугарт-Тоо на высоте 3530 м. </p>
-
                     </div>
-                    <img src="assets/images/tour1.jpg" alt="image">
+                    <img src="assets/static_files/images/tour1.jpg" alt="image">
                     <div class="shadow"></div>
                 </a>
 
@@ -78,7 +62,7 @@
                         <p>Озеро Чатыр-Куль расположено между хребтами Ат-Баши и Торугарт-Тоо на высоте 3530 м. </p>
 
                     </div>
-                    <img src="assets/images/tour1.jpg" alt="image">
+                    <img src="assets/static_files/images/tour1.jpg" alt="image">
                     <div class="shadow"></div>
                 </a>
 
@@ -97,7 +81,7 @@
                         <p>Озеро Чатыр-Куль расположено между хребтами Ат-Баши и Торугарт-Тоо на высоте 3530 м. </p>
 
                     </div>
-                    <img src="assets/images/tour1.jpg" alt="image">
+                    <img src="assets/static_files/images/tour1.jpg" alt="image">
                     <div class="shadow"></div>
                 </a>
 
@@ -116,7 +100,7 @@
                         <p>Озеро Чатыр-Куль расположено между хребтами Ат-Баши и Торугарт-Тоо на высоте 3530 м. </p>
 
                     </div>
-                    <img src="assets/images/tour1.jpg" alt="image">
+                    <img src="assets/static_files/images/tour1.jpg" alt="image">
                     <div class="shadow"></div>
                 </a>
 
@@ -135,7 +119,7 @@
                         <p>Озеро Чатыр-Куль расположено между хребтами Ат-Баши и Торугарт-Тоо на высоте 3530 м. </p>
 
                     </div>
-                    <img src="assets/images/tour1.jpg" alt="image">
+                    <img src="assets/static_files/images/tour1.jpg" alt="image">
                     <div class="shadow"></div>
                 </a>
 
@@ -154,7 +138,7 @@
                         <p>Озеро Чатыр-Куль расположено между хребтами Ат-Баши и Торугарт-Тоо на высоте 3530 м. </p>
 
                     </div>
-                    <img src="assets/images/tour1.jpg" alt="image">
+                    <img src="assets/static_files/images/tour1.jpg" alt="image">
                     <div class="shadow"></div>
                 </a>
 
@@ -173,7 +157,7 @@
                         <p>Озеро Чатыр-Куль расположено между хребтами Ат-Баши и Торугарт-Тоо на высоте 3530 м. </p>
 
                     </div>
-                    <img src="assets/images/tour1.jpg" alt="image">
+                    <img src="assets/static_files/images/tour1.jpg" alt="image">
                     <div class="shadow"></div>
                 </a>
 
@@ -192,7 +176,7 @@
                         <p>Озеро Чатыр-Куль расположено между хребтами Ат-Баши и Торугарт-Тоо на высоте 3530 м. </p>
 
                     </div>
-                    <img src="assets/images/tour1.jpg" alt="image">
+                    <img src="assets/static_files/images/tour1.jpg" alt="image">
                     <div class="shadow"></div>
                 </a>
 
@@ -218,7 +202,7 @@
                 <div class="comments">
                     <a href="#" class="comment">
                         <div class="com_img">
-                            <img src="assets/images/comm1.jpg" alt="image">
+                            <img src="assets/static_files/images/comm1.jpg" alt="image">
                         </div>
 
                         <h3>Сон Кол</h3>
@@ -239,7 +223,7 @@
 
                     <a href="#" class="comment">
                         <div class="com_img">
-                            <img src="assets/images/comm1.jpg" alt="image">
+                            <img src="assets/static_files/images/comm1.jpg" alt="image">
                         </div>
 
                         <h3>Сон Кол</h3>
@@ -260,7 +244,7 @@
 
                     <a href="#" class="comment">
                         <div class="com_img">
-                            <img src="assets/images/comm1.jpg" alt="image">
+                            <img src="assets/static_files/images/comm1.jpg" alt="image">
                         </div>
 
                         <h3>Сон Кол</h3>
@@ -291,16 +275,16 @@
                 <h5>партнеры мероприятия</h5>
 
                 <div class="block8">
-                    <a href="#"> <img src="assets/images/company1.png" alt="company"></a>
-                    <a href="#"> <img src="assets/images/company2.png" alt="company"></a>
-                    <a href="#"> <img src="assets/images/company3.png" alt="company"></a>
-                    <a href="#"> <img src="assets/images/company4.png" alt="company"></a>
-                    <a href="#"> <img src="assets/images/company5.png" alt="company"></a>
-                    <a href="#"> <img src="assets/images/company6.png" alt="company"></a>
-                    <a href="#"> <img src="assets/images/company7.png" alt="company"></a>
-                    <a href="#"> <img src="assets/images/company8.png" alt="company"></a>
-                    <a href="#"> <img src="assets/images/company9.png" alt="company"></a>
-                    <a href="#"><img src="assets/images/company10.png" alt="company"></a>
+                    <a href="#"> <img src="assets/static_files/images/company1.png" alt="company"></a>
+                    <a href="#"> <img src="assets/static_files/images/company2.png" alt="company"></a>
+                    <a href="#"> <img src="assets/static_files/images/company3.png" alt="company"></a>
+                    <a href="#"> <img src="assets/static_files/images/company4.png" alt="company"></a>
+                    <a href="#"> <img src="assets/static_files/images/company5.png" alt="company"></a>
+                    <a href="#"> <img src="assets/static_files/images/company6.png" alt="company"></a>
+                    <a href="#"> <img src="assets/static_files/images/company7.png" alt="company"></a>
+                    <a href="#"> <img src="assets/static_files/images/company8.png" alt="company"></a>
+                    <a href="#"> <img src="assets/static_files/images/company9.png" alt="company"></a>
+                    <a href="#"><img src="assets/static_files/images/company10.png" alt="company"></a>
                 </div>
 
             </div>
