--- a/templates/review.html
+++ b/templates/review.html
@@ -3,8 +3,8 @@
 <head>
     <meta charset="UTF-8">
     <title>BorborAsia</title>
-    <link rel="stylesheet" href="assets/css/normalize.css" type="text/css">
-    <link rel="stylesheet" href="assets/css/styles.css" type="text/css">
+    <link rel="stylesheet" href="assets/static_files/css/normalize.css" type="text/css">
+    <link rel="stylesheet" href="assets/static_files/css/styles.css" type="text/css">
     <meta name="viewport" content="width=device-width, initial-scale=1">
 </head>
 <body>
@@ -22,7 +22,7 @@
             <input type="email" name="email" placeholder="E-mail">
             <input type="submit" value="Отправить">
         </form>
-        <a class="popup-close" data-popup-close="popup-1"><img src="assets/images/close-btn.png" alt="image"></a>
+        <a class="popup-close" data-popup-close="popup-1"><img src="assets/static_files/images/close-btn.png" alt="image"></a>
     </div>
 </div>
 
@@ -58,7 +58,7 @@
         <div class="reviews">
             <div class="review">
                 <div class="review_img">
-                    <img src="assets/images/review1.jpg" alt="image">
+                    <img src="assets/static_files/images/review1.jpg" alt="image">
                 </div>
 
                 <div class="review_desc">
@@ -88,7 +88,7 @@
 
             <div class="review">
                 <div class="review_img">
-                    <img src="assets/images/review1.jpg" alt="image">
+                    <img src="assets/static_files/images/review1.jpg" alt="image">
                 </div>
 
                 <div class="review_desc">
@@ -111,7 +111,7 @@
 
             <div class="review">
                 <div class="review_img">
-                    <img src="assets/images/review1.jpg" alt="image">
+                    <img src="assets/static_files/images/review1.jpg" alt="image">
                 </div>
 
                 <div class="review_desc">
@@ -189,11 +189,11 @@
                         </form>
 
                         <div class="container">
-                            <div class="office group"><img src="assets/images/footer-phone.png" alt="image" class="first-image"> +996 550 055577</div>
-                            <div class="office group"><img src="assets/images/footer-message.png" alt="image" class="second-image">
+                            <div class="office group"><img src="assets/static_files/images/footer-phone.png" alt="image" class="first-image"> +996 550 055577</div>
+                            <div class="office group"><img src="assets/static_files/images/footer-message.png" alt="image" class="second-image">
                                 sunrisestudiopro@gmail.com
                             </div>
-                            <div class="office group"><img src="assets/images/location-icon.png" alt="image" class="third-image">
+                            <div class="office group"><img src="assets/static_files/images/location-icon.png" alt="image" class="third-image">
                                 Бишкек, ул. Калык Акиева 66,<br> ТЦ Весна, 3 этаж, офис №37
                             </div>
                         </div>
@@ -204,7 +204,7 @@
                 </div>
     </footer>
 
-<script src="assets/js/jquery-3.1.0.min.js"></script>
-<script src="assets/js/script.js"></script>
+<script src="assets/static_files/js/jquery-3.1.0.min.js"></script>
+<script src="assets/static_files/js/script.js"></script>
 </body>
 </html>
