--- a/templates/footer.html
+++ b/templates/footer.html
@@ -18,19 +18,22 @@
             </form>
 
             <div class="container">
-                <div class="office group"><img src="{% static 'images/footer-phone.png' %}" alt="image" class="first-image">
+                <div class="office group"><img src="{% static 'images/footer-phone.png' %}" alt="image"
+                                               class="first-image">
                     +996 550 055577
                 </div>
-                <div class="office group"><img src="{% static 'images/footer-message.png' %}" alt="image" class="second-image">
-                    sunrisestudiopro@gmail.com
+                <div class="office group"><img src="{% static 'images/footer-message.png' %}" alt="image"
+                                               class="second-image">
+                    conference@gmail.com
                 </div>
-                <div class="office group"><img src="{% static 'images/location-icon.png' %}" alt="image" class="third-image">
-                    Бишкек, ул. Калык Акиева 66,<br> ТЦ Весна, 3 этаж, офис №37
+                <div class="office group"><img src="{% static 'images/location-icon.png' %}" alt="image"
+                                               class="third-image">
+                    Бишкек, Manas University,<br>
                 </div>
             </div>
         </div>
 
-        <div class="sunrise"><p>© 2016 SUNRISE STUDIO</p></div>
+        <div class="sunrise"><p>© 2016 Conference Submission System</p></div>
 
     </div>
 </footer>
