--- a/templates/header.html
+++ b/templates/header.html
@@ -19,7 +19,7 @@
 
             <div class="book">
                 <div class="p_number">0 (312) 89 77 52</div>
-                <button type="button" name="button" data-popup-open="popup-1">Заказать звонок</button>
+                <button type="button" name="button" data-popup-open="popup-1">Оставить заявку</button>
             </div>
         </div>
     </div>
