--- a/templates/base.html
+++ b/templates/base.html
@@ -4,7 +4,7 @@
 <html lang="ru-ru">
 <head>
     <meta charset="UTF-8">
-    <title>Грант Кардон</title>
+    <title>Conference Submission System</title>
     <link rel="stylesheet" href="{% static 'slick/slick-theme.css' %}" type="text/css">
     <link rel="stylesheet" href="{% static 'slick/slick.css' %}" type="text/css">
     <link rel="stylesheet" href="{% static 'css/normalize.css' %}" type="text/css">
@@ -12,22 +12,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1">
 </head>
 <body>
-<div class="popup" data-popup="popup-1">
-    <div class="popup-inner">
 
-        <div class="application">Заполните форму</div>
-
-        <p>Мы свяжемся с вами в ближайшее время</p>
-
-        <form action="send_email.php" method="post" id="requestForm">
-            <input type="text" name="name" maxlength="25" placeholder="Имя">
-            <input type="tel" name="number" placeholder="Телефон с кодом">
-            <input type="email" name="email" placeholder="E-mail">
-            <input type="submit" value="Отправить">
-        </form>
-        <a class="popup-close" data-popup-close="popup-1"><img src="assets/static_files/images/close-btn.png" alt="image"></a>
-    </div>
-</div>
 {% block content %}
 
 
