--- a/templates/index.html
+++ b/templates/index.html
@@ -3,7 +3,23 @@
 {% load staticfiles %}
 
 {% block content %}
+    <div class="popup" data-popup="popup-1">
+        <div class="popup-inner">
 
+            <div class="application">Заполните форму</div>
+
+            <p>Мы свяжемся с вами в ближайшее время</p>
+
+            <form action="#" method="post" id="requestForm">
+                <input type="text" name="name" maxlength="25" placeholder="Имя">
+                <input type="tel" name="number" placeholder="Телефон с кодом">
+                <input type="email" name="email" placeholder="E-mail">
+                <input type="submit" value="Отправить">
+            </form>
+            <a class="popup-close" data-popup-close="popup-1"><img src="{% static 'images/close-btn.png' %}"
+                                                                   alt="image"></a>
+        </div>
+    </div>
     {% include 'header.html' %}
 
     <div class="bg1">
@@ -30,7 +46,7 @@
 
             <div class="tours tours_cart">
                 {% for item in conference %}
-                    <a href="#" class="place">
+                    <a href="{% url 'single' id=item.id %}" class="place">
                         <span class="n_place">{{ item.start }}</span>
                         <span class="n_place location">{{ item.title }}</span>
 
@@ -41,7 +57,7 @@
                         </div>
 
                         <div class="tour_desc">
-                            <div class="tour_title">Кан и Гут</div>
+                            <div class="tour_title">{{ item.title }}</div>
                             <p>{{ item.description }}</p>
                         </div>
                         <img src="{{ item.image.url }}" alt="image">
@@ -70,68 +86,23 @@
                 <h2>Отзывы</h2>
 
                 <div class="comments">
-                    <a href="#" class="comment">
-                        <div class="com_img">
-                            <img src="assets/static_files/images/comm1.jpg" alt="image">
-                        </div>
+                    {% for feedback in feedbacks %}
+                        <a href="#" class="comment">
+                            <div class="com_img">
+                                <img src="{{ feedback.image.url }}" alt="image">
+                            </div>
 
-                        <h3>Сон Кол</h3>
+                            <h3>{{ feedback.title }}</h3>
 
-                        <p>
-                            В день поездки погода была отличная, озеро невероятной красоты. Дорога была долгой, и
-                            немного
-                            утомительной, но оно того стоило. Успели сделать много снимков, насладиться природой и
-                            услышать
-                            множество историй множество историй множество историй множество историй множество историй
-                        </p>
+                            <p>{{ feedback.text }}</p>
 
-                        <div class="author">
-                            <p>Давыдова Мадина</p>
-                            <p>18.04.2017</p>
-                        </div>
-                    </a>
+                            <div class="author">
+                                <p>{{ feedback.person }}</p>
+                                <p>18.04.2017</p>
+                            </div>
+                        </a>
+                    {% endfor %}
 
-                    <a href="#" class="comment">
-                        <div class="com_img">
-                            <img src="assets/static_files/images/comm1.jpg" alt="image">
-                        </div>
-
-                        <h3>Сон Кол</h3>
-
-                        <p>
-                            В день поездки погода была отличная, озеро невероятной красоты. Дорога была долгой, и
-                            немного
-                            утомительной, но оно того стоило. Успели сделать много снимков, насладиться природой и
-                            услышать
-                            множество историй множество историй множество историй множество историймножество историй
-                        </p>
-
-                        <div class="author">
-                            <p>Давыдова Мадина</p>
-                            <p>18.04.2017</p>
-                        </div>
-                    </a>
-
-                    <a href="#" class="comment">
-                        <div class="com_img">
-                            <img src="assets/static_files/images/comm1.jpg" alt="image">
-                        </div>
-
-                        <h3>Сон Кол</h3>
-
-                        <p>
-                            В день поездки погода была отличная, озеро невероятной красоты. Дорога была долгой, и
-                            немного
-                            утомительной, но оно того стоило. Успели сделать много снимков, насладиться природой и
-                            услышать
-                            множество историй множество историй множество историй множество историй множество историй
-                        </p>
-
-                        <div class="author">
-                            <p>Давыдова Мадина</p>
-                            <p>18.04.2017</p>
-                        </div>
-                    </a>
                 </div>
 
                 <a href="#" class="link_button">Все отзывы</a>
@@ -145,16 +116,16 @@
                 <h5>партнеры мероприятия</h5>
 
                 <div class="block8">
-                    <a href="#"> <img src="assets/static_files/images/company1.png" alt="company"></a>
-                    <a href="#"> <img src="assets/static_files/images/company2.png" alt="company"></a>
-                    <a href="#"> <img src="assets/static_files/images/company3.png" alt="company"></a>
-                    <a href="#"> <img src="assets/static_files/images/company4.png" alt="company"></a>
-                    <a href="#"> <img src="assets/static_files/images/company5.png" alt="company"></a>
-                    <a href="#"> <img src="assets/static_files/images/company6.png" alt="company"></a>
-                    <a href="#"> <img src="assets/static_files/images/company7.png" alt="company"></a>
-                    <a href="#"> <img src="assets/static_files/images/company8.png" alt="company"></a>
-                    <a href="#"> <img src="assets/static_files/images/company9.png" alt="company"></a>
-                    <a href="#"><img src="assets/static_files/images/company10.png" alt="company"></a>
+                    <a href="#"> <img src="{% static 'images/company1.png' %}" alt="company"></a>
+                    <a href="#"> <img src="{% static 'images/company2.png' %}" alt="company"></a>
+                    <a href="#"> <img src="{% static 'images/company3.png' %}" alt="company"></a>
+                    <a href="#"> <img src="{% static 'images/company4.png' %}" alt="company"></a>
+                    <a href="#"> <img src="{% static 'images/company5.png' %}" alt="company"></a>
+                    <a href="#"> <img src="{% static 'images/company6.png' %}" alt="company"></a>
+                    <a href="#"> <img src="{% static 'images/company7.png' %}" alt="company"></a>
+                    <a href="#"> <img src="{% static 'images/company8.png' %}" alt="company"></a>
+                    <a href="#"> <img src="{% static 'images/company9.png' %}" alt="company"></a>
+                    <a href="#"><img src="{% static 'images/company10.png' %}" alt="company"></a>
                 </div>
 
             </div>
